--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/main.css">
-    <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch|Nanum+Brush+Script" rel="stylesheet">
 
     <title>Mi Página</title>
   </head>
@@ -38,7 +38,8 @@
 </nav>
 
 
-       <section id="header"><a name="tema4"></a>
+    <section id="header"><a name="tema4"></a>
+      <div class="container-fluid">
        <div class="row">
        <div class="col-12 page">
         <h1 class="titulo-principal">Love Usarios</h1>
@@ -47,17 +48,18 @@
         <div class="col-12 header">
 
        </div>
+       </div>
       </div>
      </section>
 
     <section>
-      <div class="container abaut">
+      <div class="container-fluid abaut">
         <div class="row"><a name="tema3"></a>
-          <div class="col-xs-12 col-md-4">
+          <div class="col-xs-12 col-sm-6 col-md-6 col-md-push-1">
           <h1 class="titulo-abaut"></h1>
         </div>
 
-         <div class="col-xs-12 col-sm-6 col-md-8">
+         <div class="col-xs-12 col-sm-6 col-md-pull-1">
          <h1 class="titulo-abautmy">Sobre Mi</h1>
          <p>Hola, mi nombre es Silvia Olivera, soy UX Designe. Soy una persona motivada, con iniciativa e independiente.Luego de 7 años de trabajar en el área de la prevención de riesgos, he encontrado mi verdadera vocación como programadora UX Designer. Me encanta entender a los usuarios, investigar y hacer productos que satisfagan sus necesidades. Creo en el trabajo colaborativo y en aquellos que potencian nuestras habilidades, pero sobre todo en mi talento. </p>
         </div>
@@ -71,10 +73,6 @@
         <div class="row"><a name="tema3"></a>
          <div class="col-12 proyect">
          <h1 class="titulo-proyect">Proyectos</h1>
-
-          <div class="button">
-         <a id="call-to-action" href="#">Call to action</a>
-         </div>
         </div>
       </div>
     </div>
@@ -92,11 +90,7 @@
        <h1>Buslab</h1>
        <p>Para que no pierdas más el bus, te avisamos cuando este cerca, ideal para las personas que viajan a diario.</p>
        </div>
-
-     <div class="button">
-      <a id="Find-out-more" href="#">Find out more</a>
     </div>
-   </div>
   </div>
 
      <div class="col-xs-12 col-sm-4">
@@ -106,9 +100,6 @@
      <div class="titulo-proyect2">
      <h1>Banco Millennials</h1>
      <p>Quieres por fin organizar tus presupuesto y programar tus sueños, este banco es ideal para ti.</p>
-    </div>
-     <div class="button">
-     <a id="Find-out-more" href="#">Find out more</a>
     </div>
    </div>
   </div>
@@ -121,14 +112,37 @@
      <h1>WomanLive</h1>
      <p>Cansada de que se te olvide pedir hora para tus exámenes de salud, ésta es la solución.</p>
     </div>
-     <div class="button">
-     <a id="Find-out-more" href="#">Find out more</a>
-    </div>
    </div>
   </div>
  </div>
  </div>
  </section>
+
+ <div class="container skill">
+  <div class="row"><a name="tema3"></a>
+   <div class="col-12">
+   <h1 class="titulo-skill">Habilidades</h1>
+   <p>Aplicación de Metodologia centrada en el usuario, situando al usuario en el centro del diseño de una aplicación o dispositivo, utilizando User Research, Marvel, Técnicas de Ideación, entre otras.</p>
+ </div>
+</div>
+</div>
+
+
+ <div class="container">
+  <div class="row icons">
+      <div class="col-xs-4 col-md-4">
+       <i class="fab fa-html5"></i>
+     </div>
+
+      <div class="col-xs-4 col-md-4">
+       <i class="fab fa-css3-alt"></i>
+     </div>
+
+      <div class="col-xs-4 col-md-4">
+       <i class="fab fa-github-square"></i>
+     </div>
+  </div>
+ </div>
 
     <div class="container contact">
      <div class="row"><a name="tema3"></a>
@@ -160,11 +174,13 @@
 
 
    <footer>
-  <div class="row">
-  <div class="col-12 footer">
-  <h3 class="footer">Desarrollado por mí, Laboratoria 2018</h3>
- </div>
-</div>
+    <div class="container-fluid">
+      <div class="row">
+      <div class="col-12 footer">
+      <h3 class="footer">Desarrollado por mí, Laboratoria 2018</h3>
+      </div>
+      </div>
+     </div>
  </footer>
 
 <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous"></script>
