--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <title>Mi Página</title>
+    <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC|Titillium+Web" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/main.css">
-    <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch|Nanum+Brush+Script" rel="stylesheet">
-
-    <title>Mi Página</title>
   </head>
+
   <body>
     <nav class="navbar navbar-default">
   <div class="container-fluid">
@@ -28,9 +27,9 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Sobre Mi</a></li>
-          <li><a href="#">Proyectos</a></li>
-            <li><a href="#">Contacto</a></li>
+        <li><a href="#sobremi">Sobre Mi</a></li>
+          <li><a href="#proyect">Proyectos</a></li>
+            <li><a href="#contact">Contacto</a></li>
 
       </ul>
     </div><!-- /.navbar-collapse -->
@@ -42,8 +41,8 @@
       <div class="container-fluid">
        <div class="row">
        <div class="col-12 page">
-        <h1 class="titulo-principal">Love Usarios</h1>
-         <h2 class="resena">UX Designer of my love</h2>
+        <h1 class="titulo-principal">Enfoque en los usuarios</h1>
+         <h2 class="resena">UX Designer</h2>
        </div>
         <div class="col-12 header">
 
@@ -52,7 +51,7 @@
       </div>
      </section>
 
-    <section>
+    <section id="sobremi">
       <div class="container-fluid abaut">
         <div class="row"><a name="tema3"></a>
           <div class="col-xs-12 col-sm-6 col-md-6 col-md-push-1">
@@ -68,7 +67,7 @@
       </div>
   </section>
 
-     <section>
+     <section  id="proyect">
       <div class="container proyect">
         <div class="row"><a name="tema3"></a>
          <div class="col-12 proyect">
@@ -81,14 +80,15 @@
   <section>
     <div class="container">
       <div class="row">
-       <div class="col-xs-12 col-sm-4">
+       <div class="col-xs-12 col-sm-4 bustrack">
        <div class="proyect1">
 
        <div class="foto-proyect1">
       </div>
        <div class="titulo-proyect1">
-       <a href="https://drive.google.com/open?id=12k2YkoA9HOaw4FXEAaeoVFjf9WUbrD0g_YmhadoNgaI">Bustrack</a>
+         <h1>BUSTRACK</h1>
        <p>Para que no pierdas más el bus, te avisamos cuando este cerca, ideal para las personas que viajan a diario.</p>
+        <a href="https://drive.google.com/open?id=12k2YkoA9HOaw4FXEAaeoVFjf9WUbrD0g_YmhadoNgaI">Ver mas</a>
        </div>
     </div>
   </div>
@@ -98,8 +98,9 @@
      <div class="foto-proyect2">
     </div>
      <div class="titulo-proyect2">
-       <a href="https://drive.google.com/open?id=104mWBVkQ5IT11rLYxEF1Z3nhMgTScrnv7tqQVgITqbE">M-Banck</a>
+     <h1>T-BANCK</h1>
      <p>Quieres por fin organizar tus presupuesto y programar tus sueños, este banco es ideal para ti.</p>
+      <a href="https://drive.google.com/open?id=104mWBVkQ5IT11rLYxEF1Z3nhMgTScrnv7tqQVgITqbE">Ver Mas</a>
     </div>
    </div>
   </div>
@@ -109,8 +110,9 @@
      <div class="foto-proyect3">
     </div>
      <div class="titulo-proyect3">
-       <a href="https://drive.google.com/open?id=1svW4204SjydkjV6nKcTxAbyXVRN7U-DRKCZrLWLJug8">WomanLive</a>
+      <h1>WOMANLIVE</h1>
      <p>Cansada de que se te olvide pedir hora para tus exámenes de salud, ésta es la solución.</p>
+     <a href="https://drive.google.com/open?id=1svW4204SjydkjV6nKcTxAbyXVRN7U-DRKCZrLWLJug8">Ver Mas</a>
     </div>
    </div>
   </div>
@@ -123,6 +125,7 @@
    <div class="col-12">
    <h1 class="titulo-skill">Habilidades</h1>
    <p>Aplicación de Metodologia centrada en el usuario, situando al usuario en el centro del diseño de una aplicación o dispositivo, utilizando User Research, Marvel, Técnicas de Ideación, entre otras.</p>
+   <a href="https://drive.google.com/open?id=1svW4204SjydkjV6nKcTxAbyXVRN7U-DRKCZrLWLJug8">Ver Mas</a>
  </div>
 </div>
 </div>
@@ -144,7 +147,7 @@
   </div>
  </div>
 
-    <div class="container contact">
+    <div  id="contact" class="container contact">
      <div class="row"><a name="tema3"></a>
       <div class="col-12">
       <h1 class="titulo-contact">Contacto</h1>
@@ -156,17 +159,17 @@
     <div class="container">
      <div class="row icons">
          <div class="col-xs-4 col-md-4">
-          <i class="fab fa-linkedin"></i>
-          <p>WWW.LINKEDIN.COM/IN/SILVIA-OLIVERA/</p>
+           <a href="https://www.linkedin.com/in/silvia-olivera/"><i class="fab fa-linkedin"></i></a>
+           <p>https://www.linkedin.com/in/silvia-olivera/</p>
         </div>
 
          <div class="col-xs-4 col-md-4">
-          <i class="fas fa-envelope-open"></i>
+          <a href="#"><i class="fas fa-envelope-open"></i></a>
           <p>soliveramendez@gmail.com</p>
         </div>
 
          <div class="col-xs-4 col-md-4">
-          <i class="fas fa-mobile-alt"></i>
+           <a href="#"><i class="fas fa-mobile-alt"></i></a>
           <p>+569 75494704</p>
         </div>
      </div>
