--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
    <div class="container proyect">
      <div class="row">
       <div class="col-12 proyect">
-      <h1 class="titulo-proyect">Proyectos</h1>
-      <a href="https://github.com/soliveramendez?tab=repositories">Ver Mi repositorio</a>
-     </div>
+      <h1 class="titulo-proyect">  <a class="repositorio" href="https://github.com/soliveramendez?tab=repositories">PROYECTOS</a>
+       </h1>
+    </div>
    </div>
   </div>
   </section>
@@ -78,35 +78,28 @@
   <section>
     <div class="container">
       <div class="row">
-       <div class="col-12 col-md-4 bustrack">
-       <div class="card bg-dark text-white">
+       <div class="card col-12 col-md-3 bg-dark text-white">
         <img class="card-img" src="assets/img/bustrack.png" alt="Card image">
       <h5 class="card-title">Bustrack</h5>
      <p class="card-text">Para que no pierdas más el bus, te avisamos cuando este cerca, ideal para las personas que viajan a diario.</p>
     <a class="vermas" href="https://drive.google.com/open?id=12k2YkoA9HOaw4FXEAaeoVFjf9WUbrD0g_YmhadoNgaI">Ver mas</a>
   </div>
-</div>
 
-
-    <div class="col-12 col-md-4 t-banck">
-      <div class="card bg-dark text-white">
-      <img class="card-img" src="assets/img/m-bank.png" alt="Card image">
-      <h5 class="card-title">T-Banck</h5>
-      <p class="card-text">Quieres por fin organizar tus presupuesto y programar tus sueños, este banco es ideal para ti.</p>
-     <a class="vermas" href="https://drive.google.com/open?id=104mWBVkQ5IT11rLYxEF1Z3nhMgTScrnv7tqQVgITqbE">Ver mas</a>
+      <div class="card col-12 col-md-3 t-banck bg-dark text-white">
+      <img class="card-img" src="assets/img/portada.png" alt="Card image">
+      <h5 class="card-title">Mi punto Venta</h5>
+      <p class="card-text">Necesitas administrar tu negocio de forma rápida y fácil.</p>
+     <a class="vermas" href="https://github.com/soliveramendez/hackathon-square-pos">Ver mas</a>
       </div>
-     </div>
 
 
-    <div class="col-12 col-md-4 womanlive">
-      <div class="card bg-dark text-white">
+      <div class="card col-12 col-md-3 womanlive bg-dark text-white">
         <img class="card-img" src="assets/img/womanlive.png" alt="Card image">
       <h5 class="card-title">WomanLive</h5>
       <p class="card-text">Cansada de que se te olvide pedir hora para tus exámenes de salud, ésta es la solución.</p>
      <a class="vermas" href="https://drive.google.com/open?id=1svW4204SjydkjV6nKcTxAbyXVRN7U-DRKCZrLWLJug8">Ver mas</a>
       </div>
      </div>
-  </div>
   </div>
 </section>
 
