--- a/index.html
+++ b/index.html
@@ -5,21 +5,20 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Mi Página</title>
     <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC|Titillium+Web" rel="stylesheet">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/main.css">
-  </head>
+</head>
 
   <body>
-
-    <header>
+   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#"><img src="assets/img/logo.png" alt=""></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+      <a class="navbar-brand" href="#"><img src="assets/img/logo.png" alt=""></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+     </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+   <div class="collapse navbar-collapse" id="navbarSupportedContent">
+     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
         <a class="nav-link" href="#sobremi">Sobre Mi</a>
       </li>
@@ -27,124 +26,119 @@
         <a class="nav-link" href="#proyect">Proyectos</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#skill">Habilidades</a>
+       <a class="nav-link" href="#skill">Habilidades</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#contact">Contacto</a>
+       <a class="nav-link" href="#contact">Contacto</a>
       </li>
-    </ul>
-  </div>
-</nav>
+     </ul>
+   </div>
+  </nav>
 </header>
 
-      <div class="container-fluid">
-       <div class="row">
-       <div class="col-12 page">
-        <h1 class="titulo-principal">Enfoque en los usuarios</h1>
-         <h2 class="resena">UX Designer</h2>
-       </div>
-        <div class="col-12 fondo">
-       </div>
-       </div>
+  <section class="fondo">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h1 class="titulo-principal">Enfoque en los usuarios</h1>
+          <h2 class="resena">UX Designer</h2>
+        </div>
       </div>
-     </section>
+    </div>
+  </div>
+</section>
 
-    <section id="sobremi">
-      <div class="container-fluid abaut">
-        <div class="row justify-content-center">
-          <div class="col-8 col-md-6 col-lg-5">
+  <section id="sobremi">
+    <div class="container-fluid abaut">
+      <div class="row justify-content-center">
+        <div class="col-8 col-md-6 col-lg-5">
           <h1 class="titulo-abaut"></h1>
         </div>
 
-         <div class="col-12 col-md-6 col-lg-5">
+        <div class="col-12 col-md-6 col-lg-5">
          <h1 class="titulo-abautmy">Sobre Mi</h1>
-         <p>Hola, mi nombre es Silvia Olivera, soy UX Designe. Soy una persona motivada, con iniciativa e independiente. Luego de 7 años de trabajar en el área de la prevención de riesgos, he encontrado mi verdadera vocación como UX Designer. Me encanta entender a los usuarios, investigar y hacer productos que satisfagan sus necesidades. Creo en el trabajo colaborativo y en aquellos que potencian nuestras habilidades, pero sobre todo en mi talento. </p>
+         <p>Hola, mi nombre es Silvia Olivera, soy UX Designer. Soy una persona motivada, con iniciativa e independiente. Luego de 7 años de trabajar en el área de la prevención de riesgos, he encontrado mi verdadera vocación como UX Designer. Me encanta entender a los usuarios, investigar y hacer productos que satisfagan sus necesidades. Creo en el trabajo colaborativo y en aquellos que potencian nuestras habilidades, pero sobre todo en mi talento.</p>
         </div>
        </div>
       </div>
   </section>
 
   <section  id="proyect">
-   <div class="container proyect">
-     <div class="row">
-      <div class="col-12 proyect">
-      <h1 class="titulo-proyect">  <a class="repositorio" href="https://github.com/soliveramendez?tab=repositories">PROYECTOS</a>
-       </h1>
-    </div>
-   </div>
-  </div>
-  </section>
-
-  <section>
     <div class="container">
       <div class="row">
-       <div class="card col-12 col-md-3 bg-dark text-white">
-        <img class="card-img" src="assets/img/bustrack.png" alt="Card image">
-      <h5 class="card-title">Bustrack</h5>
-     <p class="card-text">Para que no pierdas más el bus, te avisamos cuando este cerca, ideal para las personas que viajan a diario.</p>
-    <a class="vermas" href="https://drive.google.com/open?id=12k2YkoA9HOaw4FXEAaeoVFjf9WUbrD0g_YmhadoNgaI">Ver mas</a>
-  </div>
-
-      <div class="card col-12 col-md-3 t-banck bg-dark text-white">
-      <img class="card-img" src="assets/img/portada.png" alt="Card image">
-      <h5 class="card-title">Mi punto Venta</h5>
-      <p class="card-text">Necesitas administrar tu negocio de forma rápida y fácil.</p>
-     <a class="vermas" href="https://github.com/soliveramendez/hackathon-square-pos">Ver mas</a>
+        <div class="col-md-12">
+          <h1 class="titulo-proyect"><a class="repositorio" href="https://github.com/soliveramendez?tab=repositories">Proyectos</a></h1>
+        </div>
       </div>
-
-
-      <div class="card col-12 col-md-3 womanlive bg-dark text-white">
-        <img class="card-img" src="assets/img/womanlive.png" alt="Card image">
-      <h5 class="card-title">WomanLive</h5>
-      <p class="card-text">Cansada de que se te olvide pedir hora para tus exámenes de salud, ésta es la solución.</p>
-     <a class="vermas" href="https://drive.google.com/open?id=1svW4204SjydkjV6nKcTxAbyXVRN7U-DRKCZrLWLJug8">Ver mas</a>
+    </div>
+     <div class="row">
+       <div class="col-md-4">
+         <div class="card bg">
+           <div class="card-bustrack">
+           </div>
+           <h5 class="card-title">Bustrack</h5>
+           <p class="card-text">Para que no pierdas más el bus, te avisamos cuando este cerca, ideal para las personas que viajan a diario.</p>
+           <a class="vermas" href="https://drive.google.com/open?id=12k2YkoA9HOaw4FXEAaeoVFjf9WUbrD0g_YmhadoNgaI">Ver mas</a>
+         </div>
+        </div>
+      <div class="col-md-4">
+        <div class="card bg">
+         <div class="card-punto">
+         </div>
+          <h5 class="card-title">Mi punto Venta</h5>
+          <p class="card-text">Necesitas administrar tu negocio de forma rápida y fácil.</p>
+          <a class="vermas" href="https://github.com/soliveramendez/hackathon-square-pos">Ver mas</a>
       </div>
      </div>
-  </div>
+     <div class="col-md-4">
+       <div class="card bg">
+         <div class="card-womanlive">
+         </div>
+         <h5 class="card-title">WomanLive</h5>
+         <p class="card-text">Cansada de que se te olvide pedir hora para tus exámenes de salud, ésta es la solución.</p>
+         <a class="vermas" href="https://drive.google.com/open?id=1svW4204SjydkjV6nKcTxAbyXVRN7U-DRKCZrLWLJug8">Ver mas</a>
+       </div>
+     </div>
+   </div>
 </section>
 
  <div  id="skill" class="container skill">
   <div class="row">
-   <div class="col-12">
-   <h1 class="titulo-skill">Habilidades</h1>
-   <p>Aplicación de Metodologia centrada en el usuario, situando al usuario en el centro del diseño de una aplicación o dispositivo, utilizando User Research, Marvel, Técnicas de Ideación, entre otras.</p>
-
+    <div class="col-12">
+      <h1 class="titulo-skill">Habilidades</h1>
+      <p>Aplicación de Metodologia centrada en el usuario, situando al usuario en el centro del diseño de una aplicación o dispositivo, utilizando User Research, Marvel, Técnicas de Ideación, entre otras.</p>
+    </div>
+  </div>
  </div>
-</div>
-</div>
 
  <div class="container">
-  <div class="row icons">
-      <div class="col-4 col-md-4">
+   <div class="row icons">
+     <div class="col-4 col-md-4">
        <i class="fab fa-html5"></i>
      </div>
-
-      <div class="col-4 col-md-4">
+     <div class="col-4 col-md-4">
        <i class="fab fa-css3-alt"></i>
      </div>
-
-      <div class="col-4 col-md-4">
-        <i class="fab fa-github-square"></i>
-     </div>
-  </div>
-
-     <div class="row icons">
      <div class="col-4 col-md-4">
-      <img class="marvel"src="assets/img/marvel.png" alt="">
+      <i class="fab fa-github-square"></i>
+     </div>
     </div>
 
+  <div class="row icons">
+    <div class="col-4 col-md-4">
+      <img class="marvel"src="assets/img/marvel.png" alt="">
+    </div>
     <div class="col-4 col-md-4">
      <img class="marvel"src="assets/img/figma.png" alt="">
    </div>
-
    <div class="col-4 col-md-4">
-  <i class="fab fa-google-drive"></i>
+     <i class="fab fa-google-drive"></i>
+   </div>
   </div>
  </div>
-</div>
 
     <div  id="contact" class="container contact">
-     <div class="row"><a name="tema3"></a>
+     <div class="row contact"><a name="tema3"></a>
       <div class="col-12">
       <h1 class="titulo-contact">Contacto</h1>
       <p>Disponible y con muchas ganas de formar parte de su equipo.</p>
@@ -154,31 +148,31 @@
 
     <div class="container">
      <div class="row icons">
-         <div class="col-12 col-md-4 segundos">
-           <a href="https://www.linkedin.com/in/silvia-olivera/"><i class="fab fa-linkedin"></i></a>
-           <p>https://www.linkedin.com/in/silvia-olivera/</p>
-        </div>
+       <div class="col-12 col-md-4 segundos">
+          <a href="https://www.linkedin.com/in/silvia-olivera/"><i class="fab fa-linkedin"></i></a>
+          <p>https://www.linkedin.com/in/silvia-olivera/</p>
+      </div>
 
-         <div class="col-12 col-md-4 segundos">
-          <i class="fas fa-envelope-open"></i>
-          <p>soliveramendez@gmail.com</p>
-        </div>
+      <div class="col-12 col-md-4 segundos">
+        <i class="fas fa-envelope-open"></i>
+        <p>soliveramendez@gmail.com</p>
+      </div>
 
-         <div class="col-12 col-md-4 segundos">
-           <i class="fas fa-mobile-alt"></i>
-          <p>+569 75494704</p>
-        </div>
+      <div class="col-12 col-md-4 segundos">
+        <i class="fas fa-mobile-alt"></i>
+        <p>+569 75494704</p>
+      </div>
      </div>
     </div>
 
-   <footer>
-    <div class="container-fluid">
+  <footer>
+    <div class="container-fluid footer">
       <div class="row">
-      <div class="col-12 footer">
-      <h3 class="footer">Desarrollado por mí<a href="http://talento.laboratoria.la/">, Laboratoria 2018</a></h3>
+        <div class="col-12 footer">
+          <h3 class="footer">Desarrollado por mí<a href="http://talento.laboratoria.la/">, Laboratoria 2018</a></h3>
+        </div>
       </div>
-      </div>
-     </div>
+    </div>
  </footer>
 
  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
