--- a/index.html
+++ b/index.html
@@ -1,169 +1,247 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <title>Mi Página</title>
-    <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC|Titillium+Web" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/main.css">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <title>Mi Página</title>
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="assets/css/main.css">
 </head>
 
-  <body>
-   <header>
+<body>
+  <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#"><img src="assets/img/logo.png" alt=""></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
      </button>
 
-   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-     <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="#sobremi">Sobre Mi</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#proyect">Proyectos</a>
-      </li>
-      <li class="nav-item">
-       <a class="nav-link" href="#skill">Habilidades</a>
-      </li>
-      <li class="nav-item">
-       <a class="nav-link" href="#contact">Contacto</a>
-      </li>
-     </ul>
-   </div>
-  </nav>
-</header>
-
-  <section class="fondo">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <h1 class="titulo-principal">Enfoque en los usuarios</h1>
-          <h2 class="resena">UX Designer</h2>
-        </div>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#aboutme">Sobre Mi</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#proyect">Proyectos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#skill">Habilidades</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">Contacto</a>
+          </li>
+        </ul>
       </div>
+    </nav>
+  </header>
+
+  <section class="container-fluid fondo">
+    <div class="container d-flex flex-column justify-content-center h-100">
+      <h1 class="titulo-principal">Diseñadora UX</h1>
+      <h2 class="resena">Enfoque en los usuarios</h2>
     </div>
-  </div>
-</section>
-
-  <section id="sobremi">
-    <div class="container-fluid abaut">
-      <div class="row justify-content-center">
-        <div class="col-8 col-md-6 col-lg-5">
-          <h1 class="titulo-abaut"></h1>
-        </div>
-
-        <div class="col-12 col-md-6 col-lg-5">
-         <h1 class="titulo-abautmy">Sobre Mi</h1>
-         <p>Hola, mi nombre es Silvia Olivera, soy UX Designer. Soy una persona motivada, con iniciativa e independiente. Luego de 7 años de trabajar en el área de la prevención de riesgos, he encontrado mi verdadera vocación como UX Designer. Me encanta entender a los usuarios, investigar y hacer productos que satisfagan sus necesidades. Creo en el trabajo colaborativo y en aquellos que potencian nuestras habilidades, pero sobre todo en mi talento.</p>
-        </div>
-       </div>
-      </div>
   </section>
 
-  <section  id="proyect">
+  <section id="aboutme">
     <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <h1 class="titulo-proyect"><a class="repositorio" href="https://github.com/soliveramendez?tab=repositories">Proyectos</a></h1>
+      <div class="row justify-content-around">
+        <div class="col-md-7">
+          <h2>Sobre Mi</h2>
+          <p>Hola, mi nombre es Silvia Olivera, Diseñadora UX. Soy una persona motivada, responsable, proactiva, con ganas de crecer y formar parte de una gran organización. Luego de 7 años de trabajar en el área de la Prevención de Riesgos, he encontrado una vocación como Diseñadora UX. Me encanta
+            entender a los usuarios, investigar y hacer productos que satisfagan sus necesidades, me ha tocado liderar grupos de trabajo y tener relación directa con jefaturas en distintas áreas con excelentes resultados. Creo en el trabajo colaborativo y en aquellos que potencian nuestras habilidades, pero sobre todo en mis capacidades.</p>
+        </div>
+
+        <div class="col-md-4 offset-md-1 photo-aboutme">
         </div>
       </div>
     </div>
-     <div class="row">
-       <div class="col-md-4">
-         <div class="card bg">
-           <div class="card-bustrack">
-           </div>
-           <h5 class="card-title">Bustrack</h5>
-           <p class="card-text">Para que no pierdas más el bus, te avisamos cuando este cerca, ideal para las personas que viajan a diario.</p>
-           <a class="vermas" href="https://drive.google.com/open?id=12k2YkoA9HOaw4FXEAaeoVFjf9WUbrD0g_YmhadoNgaI">Ver mas</a>
-         </div>
-        </div>
-      <div class="col-md-4">
-        <div class="card bg">
-         <div class="card-punto">
-         </div>
-          <h5 class="card-title">Mi punto Venta</h5>
-          <p class="card-text">Necesitas administrar tu negocio de forma rápida y fácil.</p>
-          <a class="vermas" href="https://github.com/soliveramendez/hackathon-square-pos">Ver mas</a>
-      </div>
-     </div>
-     <div class="col-md-4">
-       <div class="card bg">
-         <div class="card-womanlive">
-         </div>
-         <h5 class="card-title">WomanLive</h5>
-         <p class="card-text">Cansada de que se te olvide pedir hora para tus exámenes de salud, ésta es la solución.</p>
-         <a class="vermas" href="https://drive.google.com/open?id=1svW4204SjydkjV6nKcTxAbyXVRN7U-DRKCZrLWLJug8">Ver mas</a>
-       </div>
-     </div>
-   </div>
-</section>
+  </section>
 
- <div  id="skill" class="container skill">
-  <div class="row">
-    <div class="col-12">
-      <h1 class="titulo-skill">Habilidades</h1>
-      <p>Aplicación de Metodologia centrada en el usuario, situando al usuario en el centro del diseño de una aplicación o dispositivo, utilizando User Research, Marvel, Técnicas de Ideación, entre otras.</p>
-    </div>
-  </div>
- </div>
-
- <div class="container">
-   <div class="row icons">
-     <div class="col-4 col-md-4">
-       <i class="fab fa-html5"></i>
-     </div>
-     <div class="col-4 col-md-4">
-       <i class="fab fa-css3-alt"></i>
-     </div>
-     <div class="col-4 col-md-4">
-      <i class="fab fa-github-square"></i>
-     </div>
-    </div>
-
-  <div class="row icons">
-    <div class="col-4 col-md-4">
-      <img class="marvel"src="assets/img/marvel.png" alt="">
-    </div>
-    <div class="col-4 col-md-4">
-     <img class="marvel"src="assets/img/figma.png" alt="">
-   </div>
-   <div class="col-4 col-md-4">
-     <i class="fab fa-google-drive"></i>
-   </div>
-  </div>
- </div>
-
-    <div  id="contact" class="container contact">
-     <div class="row contact"><a name="tema3"></a>
+  <section id="proyect">
+    <div class="row">
       <div class="col-12">
-      <h1 class="titulo-contact">Contacto</h1>
-      <p>Disponible y con muchas ganas de formar parte de su equipo.</p>
+        <h1 class="titulo-proyect">Mis Proyectos</h1>
+      </div>
     </div>
-   </div>
-  </div>
 
     <div class="container">
-     <div class="row icons">
-       <div class="col-12 col-md-4 segundos">
-          <a href="https://www.linkedin.com/in/silvia-olivera/"><i class="fab fa-linkedin"></i></a>
-          <p>https://www.linkedin.com/in/silvia-olivera/</p>
+
+      <div class="row">
+        <div class="col-md">
+          <div class="card">
+            <a href="#" data-toggle="modal" data-target="#exampleModal">
+            <img src="assets/img/bus1.jpg" alt="" class="card-img">
+           </a>
+          </div>
+          <!-- Modal -->
+          <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-md" role="document">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+              <img src="assets/img/bustrack.png" alt="" class="card-img-top">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Bustrack</h5>
+                </div>
+                <div class="modal-body">
+                  <p class="card-text">Para que no pierdas más el bus, te avisamos cuando este cerca, ideal para las personas que viajan a diario.</p>
+                  <a class="seemore" href="https://drive.google.com/open?id=12k2YkoA9HOaw4FXEAaeoVFjf9WUbrD0g_YmhadoNgaI">Ver mas</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md">
+          <div class="card">
+            <a href="#" data-toggle="modal" data-target="#exampleModal1">
+            <img src="assets/img/venta1.jpg" alt="" class="card-img">
+           </a>
+          </div>
+          <!-- Modal -->
+          <div class="modal fade" id="exampleModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-md" role="document">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+              <img src="assets/img/puntoventa.png" alt="Card image cap" class="card-img-top">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel1">Mi Punto Venta</h5>
+                </div>
+                <div class="modal-body">
+                  <p class="card-text">Necesitas administrar tu negocio de forma rápida y fácil.</p>
+                  <a class="seemore" href="https://docs.google.com/document/d/1dsf1PZXOC9tnlIXYL-8XqRWb4wjkZsPxOrzTGvXN9GE/edit">Ver mas</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
 
-      <div class="col-12 col-md-4 segundos">
-        <i class="fas fa-envelope-open"></i>
-        <p>soliveramendez@gmail.com</p>
-      </div>
 
-      <div class="col-12 col-md-4 segundos">
-        <i class="fas fa-mobile-alt"></i>
-        <p>+569 75494704</p>
+      <div class="row">
+        <div class="col-md">
+          <div class="card">
+            <a href="#" data-toggle="modal" data-target="#exampleModal2">
+            <img src="assets/img/piggy1.png" alt="" class="card-img">
+           </a>
+          </div>
+          <!-- Modal -->
+          <div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-md" role="document">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+              <img src="assets/img/m-bank.jpg" alt="Card image cap" class="card-img-top">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel2">Banco M-Bank</h5>
+                </div>
+                <div class="modal-body">
+                  <p class="card-text">Eres joven y quieres ahorrar para cumplir tus sueños.</p>
+                  <a class="seemore" href="https://docs.google.com/presentation/d/104mWBVkQ5IT11rLYxEF1Z3nhMgTScrnv7tqQVgITqbE/edit#slide=id.p">Ver mas</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md">
+          <div class="card">
+            <a href="#" data-toggle="modal" data-target="#exampleModal3">
+            <img src="assets/img/salud1.jpg" alt="" class="card-img">
+           </a>
+          </div>
+          <!-- Modal -->
+          <div class="modal fade" id="exampleModal3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-md" role="document">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+             </button>
+              <img src="assets/img/womanlive.png" alt="Card image cap" class="card-img-top">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel3">WomanLive</h5>
+                </div>
+                <div class="modal-body">
+                  <p class="card-text">Cansada de que se te olvide pedir hora para tus exámenes de salud, ésta es la solución.</p>
+                  <a class="seemore" href="https://drive.google.com/open?id=1svW4204SjydkjV6nKcTxAbyXVRN7U-DRKCZrLWLJug8">Ver mas</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-     </div>
     </div>
+  </section>
+
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="row">
+
+          <div  id="skill" class="col-md-12">
+            <h1 class="titulo-skill">Habilidades</h1>
+            <p>Aplicación de Metodología centrada en el usuario, situando al usuario en el centro del diseño de una aplicación o dispositivo, utilizando de user research, técnicas de ideación, prototipado, user testing, entre otras.</p>
+          </div>
+          <div class="row icons">
+            <div class="col-4 col-md-4">
+              <i class="fab fa-html5"></i>
+            </div>
+            <div class="col-4 col-md-4">
+              <i class="fab fa-css3-alt"></i>
+            </div>
+            <div class="col-4 col-md-4">
+              <i class="fab fa-github-square"></i>
+            </div>
+
+            <div class="col-4 col-md-4">
+              <img class="marvel" src="assets/img/marvel.png" alt="">
+            </div>
+            <div class="col-4 col-md-4">
+              <img class="marvel" src="assets/img/figma.png" alt="">
+            </div>
+            <div class="col-4 col-md-4">
+              <i class="fab fa-google-drive"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div id="contact" class="col-md-6">
+        <div class="row">
+          <div class="col-md-12">
+            <h1 class="titulo-contact">Contacto</h1>
+            <p>Disponible y con muchas ganas de formar parte de su equipo.</p>
+          </div>
+          <div class="row icons">
+            <div class="col-12">
+              <a href="https://www.linkedin.com/in/silvia-olivera/"><i class="fab fa-linkedin"></i></a>
+              <p>https://www.linkedin.com/in/silvia-olivera/</p>
+            </div>
+
+            <div class="col-12">
+              <i class="fas fa-envelope-open"></i>
+              <p>soliveramendez@gmail.com</p>
+            </div>
+
+            <div class="col-12">
+              <i class="fas fa-mobile-alt"></i>
+              <p>+569 75494704</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="gif">
+  </div>
 
   <footer>
     <div class="container-fluid footer">
@@ -173,12 +251,12 @@
         </div>
       </div>
     </div>
- </footer>
+  </footer>
 
- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
- <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous"></script>
-  </body>
 
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous"></script>
+ </body>
 </html>
